fixed overflow

--- a/scss/master.scss
+++ b/scss/master.scss
@@ -112,3 +112,7 @@ section.landing {
     top: 10px;
   }
 }
+
+#news {
+  padding-top: 20rem;
+}
